# wikipedia-react-rag

./: .env  .gitignore  MyRag.py  README.md  flake.nix  langchain_react_rag.ipynb  main.py  pyproject.toml  test_llama2.py  test_mistral.py  test_rag.ipynb
react/: prompt.py
src/: main.py
src/actions/: db_search.py
src/react/: agent.py  llm_call.py  prompt.py
src/utils/: ChromaDB.py
