[tool.poetry]
name = "wikipedia-react-rag"
version = "0.1.0"
description = ""
authors = ["quentin.fisch <quentin.fisch@epita.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
langchain = "^0.0.346"
pandas = "^2.1.3"
wikipedia = "^1.4.0"
python-dotenv = "^1.0.0"
openai = "^1.3.7"
pypdf2 = "^3.0.1"
chromadb = "^0.4.22"
sentence-transformers = "^2.3.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
